mobile/lib/controllers/audio_engine_bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Configuration for generating Dart FFI bindings for the C++ audio engine.
class AudioEngineBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AudioEngineBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AudioEngineBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void init_audio_engine(
    ffi.Pointer<ffi.Char> storage_path,
    ChunkReadyCallback callback,
  ) {
    return _init_audio_engine(storage_path, callback);
  }

  late final _init_audio_enginePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ChunkReadyCallback)
        >
      >('init_audio_engine');
  late final _init_audio_engine = _init_audio_enginePtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>, ChunkReadyCallback)>();

  void start_capture() {
    return _start_capture();
  }

  late final _start_capturePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('start_capture');
  late final _start_capture = _start_capturePtr.asFunction<void Function()>();

  void stop_capture() {
    return _stop_capture();
  }

  late final _stop_capturePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('stop_capture');
  late final _stop_capture = _stop_capturePtr.asFunction<void Function()>();

  void destroy_audio_engine() {
    return _destroy_audio_engine();
  }

  late final _destroy_audio_enginePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('destroy_audio_engine');
  late final _destroy_audio_engine = _destroy_audio_enginePtr
      .asFunction<void Function()>();
}

typedef ChunkReadyCallbackFunction =
    ffi.Void Function(ffi.Pointer<ffi.Char> filename);
typedef DartChunkReadyCallbackFunction =
    void Function(ffi.Pointer<ffi.Char> filename);
typedef ChunkReadyCallback =
    ffi.Pointer<ffi.NativeFunction<ChunkReadyCallbackFunction>>;
